--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,34 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; lib_deps = sandeepmistry/LoRa@^0.8.0
+
+[env:user]
 platform = espressif32
 board = esp32dev
 framework = arduino
+src_filter = +<src/user/>
+monitor_speed = 9600
+lib_deps = 
+    sandeepmistry/LoRa@^0.8.0
+    olikraus/U8g2@^2.28.8
+[env:inter]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<src/inter/>
+monitor_speed = 9600
 lib_deps = sandeepmistry/LoRa@^0.8.0
+
+
+[env:base]
+platform = espressif32
+board = esp32dev
+framework = arduino
+src_filter = +<src/base/>
+lib_deps = sandeepmistry/LoRa@^0.8.0
+monitor_speed = 9600
