Started Coading whole project

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,34 +8,36 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:esp32dev]
-; platform = espressif32
-; board = esp32dev
-; framework = arduino
-; lib_deps = sandeepmistry/LoRa@^0.8.0
+[platformio]
+default_envs = user
 
 [env:user]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<src/user/>
+build_src_filter = +<user/>
 monitor_speed = 9600
 lib_deps = 
-    sandeepmistry/LoRa@^0.8.0
-    olikraus/U8g2@^2.28.8
+	sandeepmistry/LoRa@^0.8.0
+	MyIoT
+	olikraus/U8g2@^2.36.4
+
 [env:inter]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<src/inter/>
+build_src_filter = +<inter/>
 monitor_speed = 9600
-lib_deps = sandeepmistry/LoRa@^0.8.0
-
+lib_deps = 
+	sandeepmistry/LoRa@^0.8.0
+	olikraus/U8g2@^2.36.4
 
 [env:base]
 platform = espressif32
 board = esp32dev
 framework = arduino
-src_filter = +<src/base/>
-lib_deps = sandeepmistry/LoRa@^0.8.0
+build_src_filter = +<base/>
 monitor_speed = 9600
+lib_deps = 
+	sandeepmistry/LoRa@^0.8.0
+	olikraus/U8g2@^2.36.4
