--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,7 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<base/>
 monitor_speed = 9600
+monitor_filters = send_on_enter
 lib_deps = 
 	sandeepmistry/LoRa@^0.8.0
 	olikraus/U8g2@^2.36.4
