--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = base
+default_envs = user
 
 [env:user]
 platform = espressif32
@@ -38,7 +38,6 @@ board = esp32dev
 framework = arduino
 build_src_filter = +<base/>
 monitor_speed = 9600
-monitor_filters = send_on_enter
 lib_deps = 
 	sandeepmistry/LoRa@^0.8.0
 	olikraus/U8g2@^2.36.4
